# omath

./: .clang-format  .clang-format-ignore  .clang-tidy  .cmake-format  .gitattributes  .gitignore  .gitmodules  .luarc.json  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Doxyfile  INSTALL.md  LICENSE  README.md  SECURITY.md  a.out  deploy.sh  mkdocs.yml  pixi.toml  readme.md  tailwind.config.js  vcpkg-configuration.json  vcpkg.json  xmake.lua
.github/: FUNDING.yml
.github/psd/: omath.psd
.github/workflows/: clang-tidy.yml  cmake-multi-platform.yml  docs.yml  release.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  omathConfigVersion.cmake
benchmark/: CMakeLists.txt  benchmark_collision.cpp  benchmark_mat.cpp  benchmark_projectile_pred.cpp  main.cpp
cmake/: Coverage.cmake  FindAVX2.cmake  Sanitize.cmake  Valgrind.cmake  omathConfig.cmake.in  vcpkg.cmake
cmake/triplets/: x64-linux-asan.cmake  x64-linux-msan.cmake  x64-linux-tsan.cmake  x64-linux-ubsan.cmake
docs/: api_overview.md  best_practices.md  faq.md  getting_started.md  index.md  install.md  troubleshooting.md  tutorials.md
docs/3d_primitives/: box.md  mesh.md  plane.md
docs/collision/: collider_interface.md  epa_algorithm.md  gjk_algorithm.md  line_tracer.md  mesh_collider.md  simplex.md
docs/containers/: encrypted_variable.md
docs/engines/: index.md
docs/examples/: index.md
docs/javascripts/: liquid-glass.js
docs/linear_algebra/: mat.md  triangle.md  vector2.md  vector3.md  vector4.md
docs/pathfinding/: a_star.md  navigation_mesh.md
docs/projectile_prediction/: proj_pred_engine_avx2.md  proj_pred_engine_legacy.md  projectile.md  projectile_engine.md  target.md
docs/projection/: camera.md  error_codes.md
docs/rev_eng/: external_rev_object.md  internal_rev_object.md
docs/scripts/: highlight-init.js
docs/styles/: center.css  custom-header.css  dark-overrides.css  fonts.css  links.css  liquid-glass.css  tailwind.css  tailwind.generated.css
docs/trigonometry/: angle.md  angles.md  view_angles.md
docs/utility/: color.md  elf_pattern_scan.md  macho_pattern_scan.md  pattern_scan.md  pe_pattern_scan.md  section_scan_result.md
examples/: CMakeLists.txt  ExampleProjMatBuilder.cpp  example_barycentric.cpp  example_glfw3.cpp  example_proj_mat_builder.cpp
examples/example_barycentric/: CMakeLists.txt  example_barycentric.cpp
examples/example_dx11_hook/: CMakeLists.txt  dllmain.cpp
examples/example_dx12_hook/: CMakeLists.txt  dllmain.cpp
examples/example_dx9_hook/: CMakeLists.txt  dllmain.cpp
examples/example_glfw3/: CMakeLists.txt  example_glfw3.cpp
examples/example_hud/: CMakeLists.txt  main.cpp
examples/example_hud/gui/: main_window.cpp  main_window.hpp
examples/example_opengl_hook/: CMakeLists.txt  dllmain.cpp
examples/example_proj_mat_builder/: CMakeLists.txt
examples/example_signature_scan/: CMakeLists.txt  example_signature_scan.cpp
examples/exmple_var_encryption/: CMakeLists.txt  main.cpp
extlibs/: CMakeLists.txt
include/: omath.hpp
include/omath/: Angle.hpp  Angles.hpp  Color.h  Color.hpp  Mat.h  Mat.hpp  Matrix.h  (+25 more)
modules/: omath.cppm  omath.ixx
pixi/: fmt.cmake  run.benchmark.cmake  run.examples.cmake  run.unit.tests.cmake
scripts/: asan.sh  cmake-format.sh  coverage-llvm.sh  coverage.bat.in  coverage.ps1.in  coverage.sh  coverage.sh.in  gource-timelapse.sh  msan.sh  run_clang_coverage.sh  tsan.sh  ubsan.sh  valgrind.sh
source/: CMakeLists.txt  Matrix.cpp  ProjectilePredictor.cpp  Triangle3d.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  angles.cpp  color.cpp  matrix.cpp
tests/: CMakeLists.txt  UnitTestAstar.cpp  UnitTestColor.cpp  UnitTestHooking.cpp  UnitTestLineTrace.cpp  UnitTestMat.cpp  UnitTestMatrix.cpp  UnitTestOpenGL.cpp  UnitTestPrediction.cpp  UnitTestProjection.cpp  UnitTestVector2.cpp  UnitTestVector3.cpp  UnitTestVector4.cpp  main.cpp
tests/engines/: UnitTestIwEngine.cpp  UnitTestOpenGL.cpp  UnitTestSourceEngine.cpp  unit_test_cry_engine.cpp  unit_test_frostbite_engine.cpp  unit_test_iw_engine.cpp  unit_test_minecraft_engine.cpp  unit_test_open_gl.cpp  unit_test_rage_engine.cpp  unit_test_source_engine.cpp  unit_test_traits_engines.cpp  unit_test_transform_extraction.cpp  unit_test_unity_engine.cpp  unit_test_unreal_engine.cpp
tests/general/: UnitTestAngle.cpp  UnitTestAngles.cpp  UnitTestAstar.cpp  UnitTestLineTrace.cpp  UnitTestMat.cpp  UnitTestMatrix.cpp  UnitTestPrediction.cpp  UnitTestProjection.cpp  UnitTestTriangle.cpp  UnitTestVector3.cpp  UnitTestVector4.cpp  UnitTestViewAngles.cpp  coverage_instantiations.cpp  coverage_utility_instantiations.cpp  mem_fd_helper.hpp  unit_test_a_star.cpp  unit_test_aabb.cpp  unit_test_angle.cpp  unit_test_angles.cpp  unit_test_box_primitive.cpp  unit_test_bvh_tree.cpp  unit_test_colider.cpp  unit_test_collision_extra.cpp  unit_test_color.cpp  unit_test_color_grouped.cpp  unit_test_cry_pred_engine_trait.cpp  unit_test_elf_scanner.cpp  unit_test_entity_overlay.cpp  unit_test_epa.cpp  unit_test_epa_comprehensive.cpp  unit_test_epa_internal.cpp  unit_test_epa_more.cpp  unit_test_gjk.cpp  unit_test_gjk_comprehensive.cpp  unit_test_imgui_intergration.cpp  unit_test_line_trace.cpp  unit_test_line_tracer.cpp  unit_test_line_tracer_aabb.cpp  unit_test_line_tracer_extra.cpp  unit_test_line_tracer_more.cpp  (+53 more)
tests/lua/: collision_tests.lua  color_tests.lua  hud_tests.lua  mat_tests.lua  pe_scanner_tests.lua  quaternion_tests.lua  source_engine_tests.lua  triangle_tests.lua  unit_test_lua_collision.cpp  unit_test_lua_color.cpp  unit_test_lua_hud.cpp  unit_test_lua_mat.cpp  unit_test_lua_pe_scanner.cpp  unit_test_lua_quaternion.cpp  unit_test_lua_source_engine.cpp  unit_test_lua_triangle.cpp  unit_test_lua_vector2.cpp  unit_test_lua_vector3.cpp  unit_test_lua_vector4.cpp  vec2_tests.lua  vec3_tests.lua  vec4_tests.lua  vector2_test.lua  vector3_test.lua  vector4_test.lua
tests/modules/: unit_test_module.cpp
tools/: coverage_coalescer.cpp
writerside/: c.list  o.tree  redirection-rules.xml  writerside.cfg
(+433 files in other folders)
